--- a/VTDI_GATE_LOGG.csproj
+++ b/VTDI_GATE_LOGG.csproj
@@ -62,7 +62,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Gateinout.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>Vtdigatelogdb.tt</DependentUpon>
     </Compile>
     <Compile Include="GateLogForm.cs">
       <SubType>Form</SubType>
@@ -71,10 +71,10 @@
       <DependentUpon>GateLogForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Gender.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>Vtdigatelogdb.tt</DependentUpon>
     </Compile>
     <Compile Include="Itemtodeclear.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>Vtdigatelogdb.tt</DependentUpon>
     </Compile>
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
@@ -82,28 +82,13 @@
     <Compile Include="LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model1.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model1.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Vtdigatelogdb.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Vtdigatelogdb.edmx</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="purpose.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>Vtdigatelogdb.tt</DependentUpon>
     </Compile>
     <Compile Include="User.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>Vtdigatelogdb.tt</DependentUpon>
     </Compile>
     <Compile Include="UserManagementForm.cs">
       <SubType>Form</SubType>
@@ -112,7 +97,37 @@
       <DependentUpon>UserManagementForm.cs</DependentUpon>
     </Compile>
     <Compile Include="VehicleType.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>Vtdigatelogdb.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Vtdigatelogdb.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Vtdigatelogdb.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Vtdigatelogdb.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Vtdigatelogdb.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Vtdigatelogdb.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Vtdigatelogdb.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="vtdi_gatelog_dbDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>vtdi_gatelog_dbDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="vtdi_gatelog_dbDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>vtdi_gatelog_dbDataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="vtdi_gatelog_dbDataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>vtdi_gatelog_dbDataSet2.xsd</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -135,13 +150,6 @@
     <EmbeddedResource Include="UserManagementForm.resx">
       <DependentUpon>UserManagementForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EntityDeploy Include="Vtdigatelogdb.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Vtdigatelogdb.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="Vtdigatelogdb.edmx.diagram">
-      <DependentUpon>Vtdigatelogdb.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -152,24 +160,64 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EntityDeploy Include="Vtdigatelogdb.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Vtdigatelogdb.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Vtdigatelogdb.edmx.diagram">
+      <DependentUpon>Vtdigatelogdb.edmx</DependentUpon>
+    </None>
+    <None Include="vtdi_gatelog_dbDataSet.xsc">
+      <DependentUpon>vtdi_gatelog_dbDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="vtdi_gatelog_dbDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>vtdi_gatelog_dbDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="vtdi_gatelog_dbDataSet.xss">
+      <DependentUpon>vtdi_gatelog_dbDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="vtdi_gatelog_dbDataSet1.xsc">
+      <DependentUpon>vtdi_gatelog_dbDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="vtdi_gatelog_dbDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>vtdi_gatelog_dbDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="vtdi_gatelog_dbDataSet1.xss">
+      <DependentUpon>vtdi_gatelog_dbDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="vtdi_gatelog_dbDataSet2.xsc">
+      <DependentUpon>vtdi_gatelog_dbDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="vtdi_gatelog_dbDataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>vtdi_gatelog_dbDataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="vtdi_gatelog_dbDataSet2.xss">
+      <DependentUpon>vtdi_gatelog_dbDataSet2.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Model1.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Vtdigatelogdb.edmx</DependentUpon>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Model1.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Vtdigatelogdb.edmx</DependentUpon>
-      <LastGenOutput>Model1.cs</LastGenOutput>
-    </Content>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <Content Include="Vtdigatelogdb.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Vtdigatelogdb.edmx</DependentUpon>
+      <LastGenOutput>Vtdigatelogdb.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Vtdigatelogdb.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Vtdigatelogdb.edmx</DependentUpon>
+      <LastGenOutput>Vtdigatelogdb.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
